--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,6 +3,10 @@ FROM golang:1.24-alpine AS build
 WORKDIR /src
 COPY go.mod ./
 COPY main.go ./
+COPY go.sum ./
+
+RUN go mod download
+
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /app .
 
 # run
