--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,7 @@
 # build
 FROM golang:1.24-alpine AS build
 WORKDIR /src
-COPY go.mod ./
-COPY main.go ./
-COPY go.sum ./
-
+COPY . .
 RUN go mod download
 
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /app .
