--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -27,12 +27,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # （任意）Goのテストを走らせたいなら
-      # - uses: actions/setup-go@v5
-      #   with:
-      #     go-version: '1.23'
-      # - run: go test ./...
-
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -65,6 +59,19 @@ jobs:
             app
 
           echo "image=${IMAGE_URI_SHA}" >> $GITHUB_OUTPUT
+
+      - name: Generate task definition json from template (inject secret arn)
+        run: |
+          set -euxo pipefail
+          sudo apt-get update -y
+          sudo apt-get install -y gettext-base
+
+          export DB_SECRET_ARN='${{ secrets.DB_SECRET_ARN }}'
+          envsubst < deploy/taskdef-dev.tpl.json > deploy/taskdef-dev.json
+
+          # 確認（ARNだけなのでログに出してOK）
+          grep -n "DB_SECRET_JSON" -n deploy/taskdef-dev.json
+          grep -n "valueFrom" -n deploy/taskdef-dev.json
 
       - name: Render task definition (inject new image)
         id: render-taskdef
